# mini-whirlpool

./: Cargo.toml  README.md
benches/: hash.rs
report/: main.tex  references.bib
src/: bipoly.rs  constants.rs  core.rs  lib.rs  main.rs  matrix.rs  permutations.rs  reverse_hash.rs  whirlpool.rs
